--- a/sign_up.html
+++ b/sign_up.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="https://www.freeiconspng.com/uploads/number-4-icon-19.png">
     <title>Sign Up</title>
+    <!--- John Nguyen made the HTML portion of the website and the JSON portion of the javascript-->
+    <!--- Mark Tymchenko worked specifically on the HTML form on the website -->
+    <!--- Houde Yu worked on the validation portion of the javascript --->
 </head>
 <body data-ng-app>
 <div class="container-fluid">
