Changed the phone number input type to "number"

--- a/sign_up.html
+++ b/sign_up.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col-sm-12">
                     <label for="phoneNumber" class="form-label">Shopper Contact Phone Number: </label>
-                    <input type="text" class="form-control" id="phoneNumber" required>
+                    <input type="number" class="form-control" id="phoneNumber" required>
                     <div class="invalid-feedback">
                         Please provide a valid phone number.
                     </div>
