--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="navbar navbar-light">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Us</a>
@@ -43,6 +43,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sign_up.html" target="_blank">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="product_management.html" target="_blank">Product Management</a>
                     </li>
                 </ul>
             </nav>
