--- a/product_management.html
+++ b/product_management.html
@@ -27,7 +27,7 @@
             <nav class="navbar navbar-light">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html" target="_self">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Us</a>
@@ -45,7 +45,10 @@
                         <a class="nav-link" href="#">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="product_management.html" target="_blank">Product Management</a>
+                        <a class="nav-link" href="sign_up.html" target="_self">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="product_management.html" target="_self">Product Management</a>
                     </li>
                 </ul>
             </nav>
@@ -215,15 +218,6 @@
                         // Convert JSON object to string
                         const jsonString = JSON.stringify(productData, null, 2);
                         document.getElementById('jsonOutput').textContent = jsonString; // Display JSON on the page
-
-                        // Create a downloadable JSON file
-                        const blob = new Blob([jsonString], { type: 'application/json' });
-                        const url = URL.createObjectURL(blob);
-                        const link = document.createElement('a');
-                        link.href = url;
-                        link.download = 'products.json';
-                        link.click();
-                        URL.revokeObjectURL(url); // Clean up the URL object
                     }
 
                     form.classList.add('was-validated');
