--- a/sign_up.html
+++ b/sign_up.html
@@ -27,7 +27,7 @@
             <nav class="navbar navbar-light">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html" target="_self">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Us</a>
@@ -45,7 +45,10 @@
                         <a class="nav-link" href="#">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="product_management.html" target="_blank">Product Management</a>
+                        <a class="nav-link" href="sign_up.html" target="_self">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="product_management.html" target="_self">Product Management</a>
                     </li>
                 </ul>
             </nav>
