--- a/product_management.html
+++ b/product_management.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="https://www.freeiconspng.com/uploads/number-4-icon-19.png">
     <title>Product Management</title>
-    <!--- John Nguyen -->
-    <!--- Mark Tymchenko -->
-    <!--- Houde Yu --->
+    <!--- John Nguyen created the product management page and form-->
+    <!--- Mark Tymchenko created the search bar and wrote up the json building portion of the script-->
+    <!--- Houde Yu created the form validation portion of the script --->
 </head>
 <body data-ng-app>
 <div class="container-fluid">
@@ -21,6 +21,16 @@
         <div class="col-sm-10 border">
             <h1 id="logoTitle">Project #4</h1>
         </div>
+    <div class="container-fluid">
+            <!-- Search Bar Row -->
+            <div class="row p-3">
+                <div class="col-sm-12">
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
     </div>
     <div class="row">
         <div class="col-sm-3 border">
