Added and configured most of shopping_cart.html, added shopping cart as an option in the navigation bar

--- a/product_management.html
+++ b/product_management.html
@@ -21,6 +21,7 @@
         <div class="col-sm-10 border">
             <h1 id="logoTitle">Project #4</h1>
         </div>
+    </div>
     <div class="container-fluid">
             <!-- Search Bar Row -->
             <div class="row p-3">
@@ -43,7 +44,7 @@
                         <a class="nav-link" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Shopping Cart</a>
+                        <a class="nav-link" href="shopping_cart.html" target="_self">Shopping Cart</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Products</a>
