--- a/sign_up.html
+++ b/sign_up.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Shopping Cart</a>
+                        <a class="nav-link" href="shopping_cart.html" target="_self">Shopping Cart</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Products</a>
