--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Shopping Cart</a>
+                        <a class="nav-link" href="shopping_cart.html" target="_self">Shopping Cart</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Products</a>
@@ -73,7 +73,6 @@
             </footer>
         </div>
     </div>
-
 </div>
 </body>
 </html>
