--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -68,6 +68,7 @@
       <div id="cart-total" class="text-right mt-4">
         <h4>Total: $<span id="total-amount">0</span></h4>
         <button id="checkout-btn" class="btn btn-success">Checkout</button>
+        <span id="productJSONS"></span>
       </div>
     </div>
     <div class="col-sm-2 border">
@@ -90,13 +91,16 @@
   // Sample JSON product data
   const products = [
     {
-      productId: 1,
-      description:"A number 4 made of gold",
-      productCategory:"Men's Clothing",
-      productUnitOfMeasure: "piece",
-      productPrice: 400.00,
-      productWeight: 20,
+      productId: "001",
+      productName: "A Pink #4",
+      productPrice: 400.99,
       image: "https://static.vecteezy.com/system/resources/previews/024/683/991/non_2x/pink-3d-number-4-free-png.png"
+    },
+    {
+      productId: "002",
+      productName: "A Red #4",
+      productPrice: 20.99,
+      image: "https://atlas-content-cdn.pixelsquid.com/stock-images/number-4-Vay92K1-600.jpg"
     },
     // Add more product objects as needed
   ];
@@ -110,31 +114,69 @@
     const productId = document.createElement("span");
     productId.textContent = product.productId;
 
-    const description = document.createElement("span");
-    description.textContent = product.description;
+    const productName = document.createElement("span");
+    productName.textContent = product.productName;
 
-    const productCategory = document.createElement("span");
-    productCategory.textContent = product.productCategory;
-
-    const productUnitOfMeasure = document.createElement("span");
-    productUnitOfMeasure.textContent = product.productUnitOfMeasure;
+    const quantity = document.createElement("input");
+    quantity.type = "number";
+    quantity.id = "productQuantity";
+    quantity.placeholder = "Enter quantity";
 
     const productPrice = document.createElement("span");
     productPrice.textContent = "$" + product.productPrice;
 
-    const productWeight = document.createElement("span");
-    productWeight.textContent = product.productWeight;
+    const productTotal = document.createElement("span");
+    const calculateTotal = () => {
+      const qty = quantity.value ? parseInt(quantity.value) : 1; // Default to 1 if empty
+      const total = qty * product.productPrice;
+      productTotal.textContent = "$" + total.toFixed(2); // Display total with two decimal places
+    };
+
+    calculateTotal();
+
+    // Update total whenever the quantity input changes
+    quantity.addEventListener("input", () => {
+      calculateTotal();
+      updateTotal();
+    });
 
     const itemImage = document.createElement("img");
     itemImage.src = product.image;
 
-    cartItem.appendChild(itemImage);
+    const actions = document.createElement("button");
+    actions.textContent = "Remove";
+    actions.style.backgroundColor = "red";
+    actions.style.color = "white";
+    actions.style.border = "none";
+    actions.style.borderRadius = "5px";
+    actions.style.padding =  "5px 10px";
+    actions.style.cursor = "pointer";
+
+    // Add hover effect for a darker background
+    actions.addEventListener("mouseenter", () => {
+      actions.style.backgroundColor = "darkred";
+    });
+
+    actions.addEventListener("mouseleave", () => {
+      actions.style.backgroundColor = "red";
+    });
+
+    actions.addEventListener("click", removeItem);
+
+    function removeItem(event) {
+      const cartItem = event.target.closest(".cart-item"); // Find the closest "cart-item" div
+      if (cartItem) {
+        cartItem.remove();  // Remove this specific "cart-item" div
+      }
+      }
+
     cartItem.appendChild(productId);
-    cartItem.appendChild(description);
-    cartItem.appendChild(productCategory);
-    cartItem.appendChild(productUnitOfMeasure);
-    cartItem.appendChild(productWeight);
+    cartItem.appendChild(itemImage);
+    cartItem.appendChild(productName);
     cartItem.appendChild(productPrice);
+    cartItem.appendChild(quantity);
+    cartItem.appendChild(productTotal);
+    cartItem.appendChild(actions);
 
     cartItems.appendChild(cartItem);
   }
@@ -145,7 +187,7 @@
     let total = 0;
 
     for (let i = 0; i < cartItems.length; i++) {
-      const itemPrice = parseFloat(cartItems[i].querySelector("span:last-child").textContent.slice(1));
+      const itemPrice = parseFloat(cartItems[i].querySelector("span:nth-last-child(2)").textContent.slice(1));
       total += itemPrice;
     }
 
@@ -160,6 +202,7 @@
 
   // Sample usage: Adding products to the cart
   addToCart(products[0]);
+  addToCart(products[1]);
 
   // Sample usage: Updating the total amount
   updateTotal();
