--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="styles.css">
   <meta charset="UTF-8">
-  <meta name="application-name" content="Project #4">
+  <meta name="application-name" content="Project #4 Shopping Cart">
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="icon" type="image/x-icon" href="https://www.freeiconspng.com/uploads/number-4-icon-19.png">
   <title>Shopping Cart</title>
@@ -17,8 +17,15 @@
     #cart-total {text-align: right;}
     #checkout-btn {background-color: #4CAF50;color: white;padding: 10px 20px;border: none;cursor: pointer;}
     #checkout-btn:hover {background-color: #45a049;}
+
+    /* New Styles for Horizontal JSON Output */
+    #json-output-container {display: flex; overflow-x: auto; border: 1px solid #ccc; padding: 10px; margin-top: 20px;}
+    .json-cart-item {min-width: 200px; margin-right: 10px; padding: 10px; border: 1px solid #ddd; border-radius: 5px; background-color: #f9f9f9;}
+    .json-cart-item h5 {margin-top: 0;}
+    .json-cart-item p {margin: 5px 0;}
   </style>
 </head>
+
 <body>
 <div class="container-fluid">
   <div class="row">
@@ -33,30 +40,14 @@
     <div class="col-sm-2 border">
       <nav class="navbar navbar-light">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html" target="_self">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="shopping_cart.html" target="_self">Shopping Cart</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sign_up.html" target="_self">Sign Up</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="product_management.html" target="_self">Product Management</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="index.html" target="_self">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="shopping_cart.html" target="_self">Shopping Cart</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="sign_up.html" target="_self">Sign Up</a></li>
+          <li class="nav-item"><a class="nav-link" href="product_management.html" target="_self">Product Management</a></li>
         </ul>
       </nav>
     </div>
@@ -68,15 +59,16 @@
       <div id="cart-total" class="text-right mt-4">
         <h4>Total: $<span id="total-amount">0</span></h4>
         <button id="checkout-btn" class="btn btn-success">Checkout</button>
-        <span id="productJSONS"></span>
       </div>
+
+      <!-- Horizontal JSON output container at the bottom -->
+      <div id="json-output-container"></div>
     </div>
     <div class="col-sm-2 border">
-      <aside>
-        <p>This spot is reserved for ads</p>
-      </aside>
+      <aside><p>This spot is reserved for ads</p></aside>
     </div>
   </div>
+  //Footer for website
   <div class="row">
     <div class="col-sm-12 border">
       <footer>
@@ -88,28 +80,23 @@
   </div>
 </div>
 <script>
-  // Sample JSON product data
+  //Test products for shopping cart:
   const products = [
-    {
-      productId: "001",
-      productName: "A Pink #4",
-      productPrice: 400.99,
-      image: "https://static.vecteezy.com/system/resources/previews/024/683/991/non_2x/pink-3d-number-4-free-png.png"
-    },
-    {
-      productId: "002",
-      productName: "A Red #4",
-      productPrice: 20.99,
-      image: "https://atlas-content-cdn.pixelsquid.com/stock-images/number-4-Vay92K1-600.jpg"
-    },
-    // Add more product objects as needed
+    { productId: "001", productName: "A Pink #4", productPrice: 400.99, image: "https://static.vecteezy.com/system/resources/previews/024/683/991/non_2x/pink-3d-number-4-free-png.png" },
+    { productId: "002", productName: "A Red #4", productPrice: 20.99, image: "https://atlas-content-cdn.pixelsquid.com/stock-images/number-4-Vay92K1-600.jpg" },
   ];
 
-  // Function to add a product to the cart
+  //Function to add items to cart:
   function addToCart(product) {
+    //Have a variable that holds cart item
     const cartItems = document.getElementById("cart-items");
     const cartItem = document.createElement("div");
     cartItem.classList.add("cart-item");
+
+    //Variables to append to cartItem
+    const productImg = document.createElement("img");
+    productImg.src = product.image;
+    productImg.alt = product.productName;
 
     const productId = document.createElement("span");
     productId.textContent = product.productId;
@@ -117,99 +104,101 @@
     const productName = document.createElement("span");
     productName.textContent = product.productName;
 
+    //Input field with default element of 1
     const quantity = document.createElement("input");
     quantity.type = "number";
-    quantity.id = "productQuantity";
+    quantity.value = 1;
     quantity.placeholder = "Enter quantity";
 
     const productPrice = document.createElement("span");
-    productPrice.textContent = "$" + product.productPrice;
+    productPrice.textContent = "$" + product.productPrice.toFixed(2);
 
+    // Variable calculated from quantity and item price
     const productTotal = document.createElement("span");
     const calculateTotal = () => {
-      const qty = quantity.value ? parseInt(quantity.value) : 1; // Default to 1 if empty
+      const qty = quantity.value ? parseInt(quantity.value) : 1;
       const total = qty * product.productPrice;
-      productTotal.textContent = "$" + total.toFixed(2); // Display total with two decimal places
+      productTotal.textContent = "$" + total.toFixed(2);
     };
-
     calculateTotal();
 
-    // Update total whenever the quantity input changes
+    //Listens to the numbers typed in the quantity field to update the item total and final total
     quantity.addEventListener("input", () => {
       calculateTotal();
       updateTotal();
     });
 
-    const itemImage = document.createElement("img");
-    itemImage.src = product.image;
-
+    //Remove button that hides the product and updates the total
     const actions = document.createElement("button");
     actions.textContent = "Remove";
-    actions.style.backgroundColor = "red";
-    actions.style.color = "white";
-    actions.style.border = "none";
-    actions.style.borderRadius = "5px";
-    actions.style.padding =  "5px 10px";
-    actions.style.cursor = "pointer";
-
-    // Add hover effect for a darker background
-    actions.addEventListener("mouseenter", () => {
-      actions.style.backgroundColor = "darkred";
-    });
-
-    actions.addEventListener("mouseleave", () => {
-      actions.style.backgroundColor = "red";
-    });
-
+    actions.classList.add("btn", "btn-danger");
     actions.addEventListener("click", function(event) {
-      removeItem(event);  // Remove the specific item
-      updateTotal();      // Update the total after item removal
+      removeItem(event);
+      updateTotal();
     });
 
+    //Function to remove the item to take the closest element and remove it
     function removeItem(event) {
-      const cartItem = event.target.closest(".cart-item"); // Find the closest "cart-item" div
+      const cartItem = event.target.closest(".cart-item");
       if (cartItem) {
-        cartItem.remove();  // Remove this specific "cart-item" div
+        cartItem.remove();
       }
-      }
+    }
 
+    //Put all elements into the cart item
+    cartItem.appendChild(productImg);
     cartItem.appendChild(productId);
-    cartItem.appendChild(itemImage);
     cartItem.appendChild(productName);
     cartItem.appendChild(productPrice);
     cartItem.appendChild(quantity);
     cartItem.appendChild(productTotal);
     cartItem.appendChild(actions);
 
+    //Put the cart item into "cart items"
     cartItems.appendChild(cartItem);
   }
 
-  // Function to calculate and update the total amount
+  //function to update the final total
   function updateTotal() {
     const cartItems = document.getElementsByClassName("cart-item");
     let total = 0;
-
     for (let i = 0; i < cartItems.length; i++) {
       const itemPrice = parseFloat(cartItems[i].querySelector("span:nth-last-child(2)").textContent.slice(1));
       total += itemPrice;
     }
-
     document.getElementById("total-amount").textContent = total.toFixed(2);
   }
 
-  // Event listener for the checkout button
-  document.getElementById("checkout-btn").addEventListener("click", function() {
-    // Add your checkout logic here
-    alert("Checkout button clicked!");
-  });
+  function generateCartJSON() {
+    const cartItems = document.getElementsByClassName("cart-item");
+    const jsonOutputContainer = document.getElementById("json-output-container");
+    jsonOutputContainer.innerHTML = ""; // Clear previous JSON output
 
-  // Sample usage: Adding products to the cart
-  addToCart(products[0]);
-  addToCart(products[1]);
+    for (let i = 0; i < cartItems.length; i++) {
+      const productId = cartItems[i].querySelector("span:nth-child(2)").textContent;
+      const productName = cartItems[i].querySelector("span:nth-child(3)").textContent;
+      const price = parseFloat(cartItems[i].querySelector("span:nth-child(4)").textContent.slice(1));
+      const quantity = parseInt(cartItems[i].querySelector("input").value);
 
-  // Sample usage: Updating the total amount
+      const cartItemJSON = document.createElement("div");
+      cartItemJSON.classList.add("json-cart-item");
+      cartItemJSON.innerHTML = `
+        <h5>${productName}</h5>
+        <p>ID: ${productId}</p>
+        <p>Price: $${price.toFixed(2)}</p>
+        <p>Quantity: ${quantity}</p>
+        <p>Total: $${(price * quantity).toFixed(2)}</p>
+      `;
+
+      jsonOutputContainer.appendChild(cartItemJSON);
+    }
+  }
+
+  document.getElementById("checkout-btn").addEventListener("click", generateCartJSON);
+
+  products.forEach(product => addToCart(product));
   updateTotal();
 </script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-zcb3+fhvQZ+HCq8GzI1E2u8ttbOGZmvOj1kqgOHw4fZBoNCmYu7Bh4w0k2h+biIq" crossorigin="anonymous"></script>
 </body>
 </html>
