--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -22,6 +22,9 @@
     #checkout-btn:hover {background-color: #45a049;}
     #json-output-container {border: 1px solid #ccc; padding: 10px; margin-top: 20px; white-space: pre-wrap;}
   </style>
+  <!--- John Nguyen created the shopping cart page and the ability to append items to the cart-->
+  <!--- Mark Tymchenko created 'checkout' JSON document function, the quantity field and the total fields-->
+  <!--- Houde Yu created the remove button function and the headers for the shopping cart items --->
 </head>
 <body>
 <div class="container-fluid">
